# fashion-radar

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  conduct_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: entities.example.yaml  scoring.example.yaml  sources.example.yaml
configs/entity-packs/: buyer-brands.example.yaml  fashion-watchlist.example.yaml
configs/source-packs/: fashion-public.example.yaml
data/: README.md
docs/: PROJECT_BRIEF.md  REVIEW_PROTOCOL.md  architecture.md  candidate-discovery.md  cli-reference.md  community-signal-import.md  community-signal-quality.md  daily-digest.md  dashboard.md  data-retention.md  dependency-mirrors.md  entity-pack-quality.md  entity-packs.md  first-run.md  github-upload-checklist.md  manual-signal-import.md  release-gate-stage31.md  row-one.md  scheduling.md  scoring.md  source-boundaries.md  source-pack-quality.md  source-packs.md  trend-deltas.md
docs/reviews/: 2026-07-09-stage-363-daily-local-coverage-map-code-claude.md  2026-07-09-stage-363-daily-local-coverage-map-plan-claude.md  2026-07-09-stage-364-daily-local-theme-summary-strip-code-claude.md  2026-07-09-stage-364-daily-local-theme-summary-strip-plan-claude.md  2026-07-09-stage-365-local-article-content-segment-deck-code-claude.md  2026-07-09-stage-365-local-article-content-segment-deck-plan-claude.md  2026-07-09-stage-366-local-article-body-filing-cues-code-claude.md  2026-07-09-stage-366-local-article-body-filing-cues-plan-claude.md  2026-07-09-stage-367-saved-article-filing-inbox-plan-claude.md  claude-code-plan-rereview-prompt.md  claude-code-plan-rereview.md  claude-code-plan-review-prompt.md  claude-code-plan-review.md  claude-code-stage-1-review-prompt-short.md  claude-code-stage-1-review-prompt.md  claude-code-stage-1-review.md  claude-code-stage-10-plan-rereview-2.md  claude-code-stage-10-plan-rereview-3-prompt.md  claude-code-stage-10-plan-rereview-3.md  claude-code-stage-10-plan-rereview-prompt.md  claude-code-stage-10-plan-rereview.md  claude-code-stage-10-plan-review-prompt.md  (+2085 more)
examples/: community-signal-profile.example.json  community-signals.example.csv  community-signals.example.json  community-signals.watchlist.example.csv  community-tool-handoff.example.csv  community-tool-handoff.example.json
reports/: README.md
schemas/: community-signals.schema.json  row-one-app.schema.json  row-one-manifest.schema.json  row-one-runtime.schema.json
scripts/: check_first_run_smoke.py  check_package_archives.py  check_release_hygiene.py
src/fashion_radar/: cli.py  (+32 more)
tests/: test_agents_scope_docs.py  test_architecture_boundary_docs.py  test_candidate_discovery_docs.py  test_candidate_extraction.py  test_candidate_scoring.py  test_cli.py  test_cli_docs.py  test_collectors_article.py  test_collectors_base.py  test_collectors_gdelt.py  test_collectors_html.py  test_collectors_instagram.py  test_collectors_robots.py  test_collectors_rss.py  test_collectors_runner.py  test_collectors_sitemap.py  test_collectors_twitter.py  test_collectors_xiaohongshu.py  test_collectors_youtube.py  test_community_candidates.py  test_community_handoff_check.py  test_community_handoff_manifest.py  test_community_handoff_workflow.py  test_community_signal_import_contract.py  test_community_signal_lint.py  test_community_signal_profile.py  test_community_tool_handoff_directory_examples.py  test_config.py  test_daily_digest_docs.py  test_dashboard.py  test_dashboard_docs.py  test_data_retention_docs.py  test_dates.py  test_db.py  test_dedupe.py  test_digests.py  test_entity_pack_lint.py  test_entity_pack_quality_docs.py  test_entity_packs.py  test_entity_packs_docs.py  (+90 more)
(+734 files in other folders)
