[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fashion-radar"
version = "0.1.0"
description = "Free-first local fashion trend radar."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fashion Radar contributors" }]
dependencies = [
  "platformdirs>=4.3.6",
  "pydantic>=2.10.4",
  "python-dateutil>=2.9.0.post0",
  "pyyaml>=6.0.2",
  "typer>=0.15.1",
]

[project.optional-dependencies]
collectors = [
  "feedparser>=6.0.11",
  "httpx>=0.28.1",
  "robotexclusionrulesparser>=1.7.1",
  "tenacity>=9.0.0",
  "trafilatura>=2.0.0",
]
storage = [
  "sqlalchemy>=2.0.36",
]
dashboard = [
  "pandas>=2.2.3",
  "streamlit>=1.41.1",
]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.6",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.6",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/fashion_radar"]

[project.scripts]
fashion-radar = "fashion_radar.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
