[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fashion-radar"
version = "0.1.0"
description = "Free-first local fashion trend radar."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fashion Radar contributors" }]
keywords = [
  "fashion",
  "trend-analysis",
  "local-first",
  "rss",
  "gdelt",
  "community-signals",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Office/Business :: News/Diary",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "feedparser>=6.0.11",
  "httpx[socks]>=0.28.1",
  "platformdirs>=4.3.6",
  "pydantic>=2.10.4",
  "python-dateutil>=2.9.0.post0",
  "pyyaml>=6.0.2",
  "robotexclusionrulesparser>=1.7.1",
  "sqlalchemy>=2.0.36",
  "tenacity>=9.0.0",
  "typer>=0.15.1",
]

[project.urls]
Homepage = "https://github.com/Lordakee/fashion-radar"
Repository = "https://github.com/Lordakee/fashion-radar"
Documentation = "https://github.com/Lordakee/fashion-radar/tree/main/docs"
Issues = "https://github.com/Lordakee/fashion-radar/issues"
Changelog = "https://github.com/Lordakee/fashion-radar/blob/main/CHANGELOG.md"
Security = "https://github.com/Lordakee/fashion-radar/blob/main/SECURITY.md"

[project.optional-dependencies]
article = [
  "trafilatura>=2.0.0",
]
dashboard = [
  "pandas>=2.2.3",
  "streamlit>=1.41.1",
]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.6",
    "fashion-radar[article]",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/fashion_radar"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/docs/reviews/**",
  "/docs/superpowers/**",
]

[project.scripts]
fashion-radar = "fashion_radar.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
